--- a/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj
+++ b/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -306,6 +306,7 @@
     <ClCompile Include="src\d3d9\GsDevice9.cpp" />
     <ClCompile Include="src\d3d9\device\SetRenderState9.cpp" />
     <ClCompile Include="src\EntryPoint.cpp" />
+    <ClCompile Include="src\FormatWindowsError.cpp" />
     <ClCompile Include="src\Logging.cpp" />
     <ClCompile Include="src\OpenAdapter.cpp" />
   </ItemGroup>
@@ -344,6 +345,7 @@
     <ClInclude Include="include\d3d9\device\SetRenderState9.hpp" />
     <ClInclude Include="include\DriverDebug.hpp" />
     <ClInclude Include="include\dxgi\DxgiEnumDebug.hpp" />
+    <ClInclude Include="include\FormatWindowsError.hpp" />
     <ClInclude Include="include\Logging.hpp" />
     <ClInclude Include="include\WindowsNtPolyfill.hpp" />
     <ClInclude Include="include\d3d10\GsDevice10.hpp" />
