--- a/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj.filters
+++ b/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="Source Files">
@@ -120,6 +120,9 @@
     <ClCompile Include="src\d3d10\device\DynamicResourceUnmap.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\FormatWindowsError.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\d3d9\GetCaps9.hpp">
@@ -231,6 +234,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\d3d10\device\DynamicResourceUnmap.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\FormatWindowsError.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
