--- a/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj.filters
+++ b/UserModeDrivers/D3DUserModeDriver/D3DUserModeDriver.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClInclude Include="include\d3d10\device\DynamicResourceUnmap.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\SpinLock.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
     <ClInclude Include="include\FormatWindowsError.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
