--- a/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj
+++ b/DisplayMiniportDriver/DisplayMiniportDriver/DisplayMiniportDriver.vcxproj
@@ -489,36 +489,36 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
     <FilesToPackage Include="$(TargetPath)" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\AddDevice.cpp" />
+    <ClCompile Include="src\miniport\AddDevice.cpp" />
     <ClCompile Include="src\BlockTransfer.cpp" />
-    <ClCompile Include="src\CloseAllocation.cpp" />
-    <ClCompile Include="src\CollectDbgInfo.cpp" />
-    <ClCompile Include="src\CommitVidPn.cpp" />
-    <ClCompile Include="src\ControlEtwLogging.cpp" />
-    <ClCompile Include="src\ControlInterrupt.cpp" />
-    <ClCompile Include="src\CreateAllocation.cpp" />
-    <ClCompile Include="src\CreateContext.cpp" />
-    <ClCompile Include="src\CreateDevice.cpp" />
-    <ClCompile Include="src\DestroyAllocation.cpp" />
-    <ClCompile Include="src\DestroyContext.cpp" />
-    <ClCompile Include="src\DestroyDevice.cpp" />
-    <ClCompile Include="src\DeviceComms.cpp" />
+    <ClCompile Include="src\miniport\CloseAllocation.cpp" />
+    <ClCompile Include="src\miniport\CollectDbgInfo.cpp" />
+    <ClCompile Include="src\miniport\CommitVidPn.cpp" />
+    <ClCompile Include="src\miniport\ControlEtwLogging.cpp" />
+    <ClCompile Include="src\miniport\ControlInterrupt.cpp" />
+    <ClCompile Include="src\miniport\CreateAllocation.cpp" />
+    <ClCompile Include="src\miniport\CreateContext.cpp" />
+    <ClCompile Include="src\miniport\CreateDevice.cpp" />
+    <ClCompile Include="src\miniport\DestroyAllocation.cpp" />
+    <ClCompile Include="src\miniport\DestroyContext.cpp" />
+    <ClCompile Include="src\miniport\DestroyDevice.cpp" />
+    <ClCompile Include="src\comms\DeviceComms.cpp" />
     <ClCompile Include="src\Devices.cpp" />
-    <ClCompile Include="src\DevThunks.cpp" />
-    <ClCompile Include="src\DispatchIoRequest.cpp" />
-    <ClCompile Include="src\DisplayOnlyDriver.cpp" />
-    <ClCompile Include="src\DpcRoutine.cpp" />
-    <ClCompile Include="src\DriverEntry.cpp" />
-    <ClCompile Include="src\Full3DDriver.cpp" />
-    <ClCompile Include="src\EnumVidPnCofuncModality.cpp" />
-    <ClCompile Include="src\FilterConnectNotify.c" />
-    <ClCompile Include="src\FilterDeviceManager.c" />
-    <ClCompile Include="src\FilterDisconnectNotify.c" />
-    <ClCompile Include="src\FilterInstanceQueryTeardown.c" />
-    <ClCompile Include="src\FilterInstanceSetup.c" />
-    <ClCompile Include="src\FilterMessageNotify.c" />
-    <ClCompile Include="src\FilterUnload.c" />
-    <ClCompile Include="src\GetScanLine.cpp" />
+    <ClCompile Include="src\miniport\DevThunks.cpp" />
+    <ClCompile Include="src\miniport\DispatchIoRequest.cpp" />
+    <ClCompile Include="src\entry\DisplayOnlyDriver.cpp" />
+    <ClCompile Include="src\miniport\DpcRoutine.cpp" />
+    <ClCompile Include="src\entry\DriverEntry.cpp" />
+    <ClCompile Include="src\entry\Full3DDriver.cpp" />
+    <ClCompile Include="src\miniport\EnumVidPnCofuncModality.cpp" />
+    <ClCompile Include="src\comms\FilterConnectNotify.c" />
+    <ClCompile Include="src\comms\FilterDeviceManager.c" />
+    <ClCompile Include="src\comms\FilterDisconnectNotify.c" />
+    <ClCompile Include="src\comms\FilterInstanceQueryTeardown.c" />
+    <ClCompile Include="src\comms\FilterInstanceSetup.c" />
+    <ClCompile Include="src\comms\FilterMessageNotify.c" />
+    <ClCompile Include="src\comms\FilterUnload.c" />
+    <ClCompile Include="src\miniport\GetScanLine.cpp" />
     <ClCompile Include="src\GsGraphicsContext.cpp" />
     <ClCompile Include="src\GsLogicalDevice.cpp" />
     <ClCompile Include="src\GsMemoryManager.cpp" />
@@ -526,31 +526,31 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
     <ClCompile Include="src\Guids.c" />
     <ClCompile Include="src\HyDevice.cpp" />
     <ClCompile Include="src\I2CInterface.c" />
-    <ClCompile Include="src\InterruptRoutine.cpp" />
-    <ClCompile Include="src\IsSupportedVidPn.cpp" />
+    <ClCompile Include="src\miniport\InterruptRoutine.cpp" />
+    <ClCompile Include="src\miniport\IsSupportedVidPn.cpp" />
     <ClCompile Include="src\Logging.cpp" />
     <ClCompile Include="src\MemoryAllocator.c" />
-    <ClCompile Include="src\NotifyAcpiEvent.cpp" />
-    <ClCompile Include="src\OpenAllocation.cpp" />
-    <ClCompile Include="src\PresentDisplayOnly.cpp" />
-    <ClCompile Include="src\QueryAdapterInfo.cpp" />
-    <ClCompile Include="src\QueryChildRelations.cpp" />
-    <ClCompile Include="src\QueryChildStatus.cpp" />
-    <ClCompile Include="src\QueryDeviceDescriptor.cpp" />
-    <ClCompile Include="src\QueryInterface.cpp" />
-    <ClCompile Include="src\RecommendFunctionalVidPn.cpp" />
-    <ClCompile Include="src\RecommendMonitorModes.cpp" />
+    <ClCompile Include="src\miniport\NotifyAcpiEvent.cpp" />
+    <ClCompile Include="src\miniport\OpenAllocation.cpp" />
+    <ClCompile Include="src\miniport\PresentDisplayOnly.cpp" />
+    <ClCompile Include="src\miniport\QueryAdapterInfo.cpp" />
+    <ClCompile Include="src\miniport\QueryChildRelations.cpp" />
+    <ClCompile Include="src\miniport\QueryChildStatus.cpp" />
+    <ClCompile Include="src\miniport\QueryDeviceDescriptor.cpp" />
+    <ClCompile Include="src\miniport\QueryInterface.cpp" />
+    <ClCompile Include="src\miniport\RecommendFunctionalVidPn.cpp" />
+    <ClCompile Include="src\miniport\RecommendMonitorModes.cpp" />
     <ClCompile Include="src\RegisterMemCopy.c" />
-    <ClCompile Include="src\RemoveDevice.cpp" />
-    <ClCompile Include="src\ResetDevice.cpp" />
-    <ClCompile Include="src\ResilientDisplayOnlyDriver.cpp" />
-    <ClCompile Include="src\SetPowerState.cpp" />
-    <ClCompile Include="src\SetVidPnSourceAddress.cpp" />
-    <ClCompile Include="src\SetVidPnSourceVisibility.cpp" />
-    <ClCompile Include="src\StartDevice.cpp" />
-    <ClCompile Include="src\StopDevice.cpp" />
-    <ClCompile Include="src\StopDeviceAndReleasePostDisplayOwnership.cpp" />
-    <ClCompile Include="src\UpdateActiveVidPnPresentPath.cpp" />
+    <ClCompile Include="src\miniport\RemoveDevice.cpp" />
+    <ClCompile Include="src\miniport\ResetDevice.cpp" />
+    <ClCompile Include="src\entry\ResilientDisplayOnlyDriver.cpp" />
+    <ClCompile Include="src\miniport\SetPowerState.cpp" />
+    <ClCompile Include="src\miniport\SetVidPnSourceAddress.cpp" />
+    <ClCompile Include="src\miniport\SetVidPnSourceVisibility.cpp" />
+    <ClCompile Include="src\miniport\StartDevice.cpp" />
+    <ClCompile Include="src\miniport\StopDevice.cpp" />
+    <ClCompile Include="src\miniport\StopDeviceAndReleasePostDisplayOwnership.cpp" />
+    <ClCompile Include="src\miniport\UpdateActiveVidPnPresentPath.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DriverVersionNumbers.h" />
@@ -560,7 +560,7 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
     <ClInclude Include="include\CollectDbgInfo.hpp" />
     <ClInclude Include="include\CommitVidPn.hpp" />
     <ClInclude Include="include\Common.h" />
-    <ClInclude Include="include\comms\MessageType.h" />
+    <ClInclude Include="include\shared\MessageType.h" />
     <ClInclude Include="include\Config.h" />
     <ClInclude Include="include\ControlEtwLogging.hpp" />
     <ClInclude Include="include\ControlInterrupt.hpp" />
@@ -571,20 +571,20 @@ xcopy /y $(SolutionDir)..\UserModeDrivers\bin\x64\$(Configuration)\D3DUserModeDr
     <ClInclude Include="include\DestroyAllocation.hpp" />
     <ClInclude Include="include\DestroyContext.hpp" />
     <ClInclude Include="include\DestroyDevice.hpp" />
-    <ClInclude Include="include\DeviceComms.hpp" />
+    <ClInclude Include="include\comms\DeviceComms.hpp" />
     <ClInclude Include="include\Devices.hpp" />
     <ClInclude Include="include\DevThunks.hpp" />
     <ClInclude Include="include\DispatchIoRequest.hpp" />
     <ClInclude Include="include\DpcRoutine.hpp" />
     <ClInclude Include="include\DriverVersion.h" />
     <ClInclude Include="include\EnumVidPnCofuncModality.hpp" />
-    <ClInclude Include="include\FilterConnectNotify.h" />
-    <ClInclude Include="include\FilterDeviceManager.h" />
-    <ClInclude Include="include\FilterDisconnectNotify.h" />
-    <ClInclude Include="include\FilterInstanceQueryTeardown.h" />
-    <ClInclude Include="include\FilterInstanceSetup.h" />
-    <ClInclude Include="include\FilterMessageNotify.h" />
-    <ClInclude Include="include\FilterUnload.h" />
+    <ClInclude Include="include\comms\FilterConnectNotify.h" />
+    <ClInclude Include="include\comms\FilterDeviceManager.h" />
+    <ClInclude Include="include\comms\FilterDisconnectNotify.h" />
+    <ClInclude Include="include\comms\FilterInstanceQueryTeardown.h" />
+    <ClInclude Include="include\comms\FilterInstanceSetup.h" />
+    <ClInclude Include="include\comms\FilterMessageNotify.h" />
+    <ClInclude Include="include\comms\FilterUnload.h" />
     <ClInclude Include="include\GetScanLine.hpp" />
     <ClInclude Include="include\GsGraphicsContext.hpp" />
     <ClInclude Include="include\GsPresentManager.hpp" />
